--- a/TestAjax/WebContent/WEB-INF/web.xml
+++ b/TestAjax/WebContent/WEB-INF/web.xml
@@ -8,8 +8,8 @@
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
-      </welcome-file-list>
-    <servlet>
+  </welcome-file-list>
+  <servlet>
     <description>Get Information about Country - jQuery Ajax Request</description>
     <display-name>CountryInformation</display-name>
     <servlet-name>CountryInformation</servlet-name>
@@ -19,5 +19,30 @@
     <servlet-name>CountryInformation</servlet-name>
     <url-pattern>/CountryInformation</url-pattern>
   </servlet-mapping>
-
+  <filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>encodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <description></description>
+    <display-name>SignatureUpdated</display-name>
+    <servlet-name>SignatureUpdated</servlet-name>
+    <servlet-class>com.baj.action.SignatureUpdated</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SignatureUpdated</servlet-name>
+    <url-pattern>/SignatureUpdated</url-pattern>
+  </servlet-mapping>
 </web-app>
